<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#89cff0"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/white"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#7393B3"
            android:padding="10dp"
            android:text="@string/choose_your_burger"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/white" />


        <Spinner
            android:id="@+id/burgers_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text_view"
            android:entries="@array/choose_burger_options"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/title_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#7393B3"
            android:padding="10dp"
            android:text="@string/choose_your_drink"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/drinks_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text_view2"
            android:entries="@array/choose_drink_options"
            android:minHeight="48dp" />

        <RadioGroup
            android:id="@+id/fries_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fries_S" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fries_M" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fries_L" />

        </RadioGroup>

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:hint="Any Special Instructions?" />

        <Button
            android:id="@+id/view_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/comment"
            android:onClick="onViewOrderButtonClick"
            android:text="@string/View" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/comment"
            android:onClick="onSubmitOrderButtonClick"
            android:text="@string/Submit" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="10sp"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:rowCount="1">

        <Button
            android:id="@+id/button"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:foreground="@drawable/b1" />

        <Button
            android:id="@+id/button2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:foreground="@drawable/b2"/>

    </GridLayout>

</LinearLayout>



